--- a/lesson1/exercises/src/app/fav-photos/fav-photos.component.css
+++ b/lesson1/exercises/src/app/fav-photos/fav-photos.component.css
@@ -1,10 +1,15 @@
+h1 {
+   text-align: center;
+   text-decoration: underline;
+}
+
 h3 {
    color: brown;
 }
 
 img {
-   height:25%;
-   width:25%;
+   height:100%;
+   width: 100%;
 }
 
 .photos {
