--- a/lesson1/exercises/src/app/app.component.html
+++ b/lesson1/exercises/src/app/app.component.html
@@ -1,8 +1,8 @@
-
+<body>  
 <div class="container">
   <page-title></page-title>
     <div class="row justify-content-center">
-      
+
       <div class="col-3">
         <movie-list></movie-list>
       </div>
@@ -19,7 +19,7 @@
     <hr>
     <fav-links></fav-links>
   </div>
-
+</body>
   
  
 
