--- a/lesson1/exercises/src/app/fav-links/fav-links.component.html
+++ b/lesson1/exercises/src/app/fav-links/fav-links.component.html
@@ -1,4 +1,6 @@
-<p>fav-links works!</p>
-<a href = "{{favLinks[0]}}">Board Game Arena</a> <br>
-<a href = "{{favLinks[1]}}">Dominion</a> <br>
-<a href = "{{favLinks[2]}}">LaunchCode</a> <br>
+<div class = "links">
+    <h3>Favorite Links</h3>
+    <a href = "{{favLinks[0]}}" target="blank">Board Game Arena</a> <br>
+    <a href = "{{favLinks[1]}}" target="blank">Dominion</a> <br>
+    <a href = "{{favLinks[2]}}" target="blank">LaunchCode</a> <br>
+</div>
