--- a/lesson3/exercises/src/app/app.component.html
+++ b/lesson3/exercises/src/app/app.component.html
@@ -11,30 +11,34 @@
             <h3>Fuel Levels</h3>
             <p>Tank Full</p>
             <h3>Astronaut Chat</h3>
-            <p>Houston, we are ready when you are!</p>
+            <p>{{message}}</p>
          </div>
       </div>
 
       <div class="col-6">
-         <div class="shuttle-background" style="background-color: green">
-            <img src="assets/images/LaunchCode_rocketline_white.png" height = "75" width = "75" [style.left]="0" [style.bottom]="0"/>
+         <div class="shuttle-background" [style.backgroundColor]="color">
+            <img #rocketImage src="assets/images/LaunchCode_rocketline_white.png" height = "75" width = "75" [style.left]="0" [style.bottom]="0"/>
          </div>
       </div>
 
       <div class="col-3">
-         <div class="container-right"b>
-            <button>Up</button>
-            <button>Down</button>
-            <button>Right</button>
-            <button>Left</button>
+         <div class="container-right">
+            <div *ngIf="!takeOffEnabled">
+               <button (click)="moveRocket(rocketImage, 'up')">Up</button>
+               <button (click)="moveRocket(rocketImage, 'down')">Down</button>
+               <button (click)="moveRocket(rocketImage, 'right')">Right</button>
+               <button (click)="moveRocket(rocketImage, 'left')">Left</button>
+            </div>
             <h3>Space Shuttle Height</h3>
-            <p>0 km</p>
+            <p>{{height}} km</p>
          </div>
       </div>
    </div>
    <div class="container-control-buttons">
-      <button>Take Off</button>
-      <button>Land</button>
-      <button>Abort Mission</button>
+      <button (click)="handleTakeOff()" [disabled]="!takeOffEnabled">Take Off</button>
+      <button (click)="handleLand(rocketImage)" [disabled]="takeOffEnabled">Land</button>
+      <button (click)="handleAbortMission(rocketImage)" [disabled]="takeOffEnabled">Abort Mission</button>
    </div>
 </div>
+
+
